force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <inlineHelpText>Fase atual do Lead.</inlineHelpText>
    <label>Fase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Contacting</fullName>
                <label>Tentando Contato</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <label>Contato Realizado</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <label>Agendamento</label>
            </value>
            <value>
                <fullName>Converted</fullName>
                <label>Convertido</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <label>Lead Perdido</label>
            </value>
            <value>
                <fullName>Unqualified</fullName>
                <label>Não Qualificado</label>
            </value>
            <value>
                <fullName>VisitDone</fullName>
                <label>Visita Realizada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>