force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/FaseParaRedirecionamentoDoLead__c.field-meta.xml
<CustomField>
    <fullName>FaseParaRedirecionamentoDoLead__c</fullName>
    <inlineHelpText>Fase do Lead após o vencimento do SLA.</inlineHelpText>
    <label>Fase para redirecionamento do Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Contacting</fullName>
                <label>Tentando Contato</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <label>Contato Realizado</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <label>Agendamento</label>
            </value>
            <value>
                <fullName>Converted</fullName>
                <label>Convertido</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <label>Lead perdido</label>
            </value>
            <value>
                <fullName>Unqualified</fullName>
                <label>Não qualificado</label>
            </value>
            <value>
                <fullName>VisitDone</fullName>
                <label>Visita Realizada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>