force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/FilaParaRedirecionamentoDoLead__c.field-meta.xml
<CustomField>
    <fullName>FilaParaRedirecionamentoDoLead__c</fullName>
    <inlineHelpText>Fila de redirecionamento de Leads perdidos.</inlineHelpText>
    <label>Fila para redirecionamento do Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>