force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/motivoDaPerda__c.field-meta.xml
<CustomField>
    <fullName>motivoDaPerda__c</fullName>
    <inlineHelpText>Defina um SLA para Leads perdidos, de acordo com o motivo da perda.</inlineHelpText>
    <label>Motivo da perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renda Insuficiente</fullName>
            </value>
            <value>
                <fullName>Não Contatado</fullName>
            </value>
            <value>
                <fullName>Não se Adequa.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>