force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/TempoDeSLA__c.field-meta.xml
<CustomField>
    <fullName>TempoDeSLA__c</fullName>
    <inlineHelpText>Define a qualidade esperada de um serviço,
tempo estabelecido em minutos.</inlineHelpText>
    <label>Tempo de SLA</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>