force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/tempoLimiteParaFarolVermelho__c.field-meta.xml
<CustomField>
    <fullName>tempoLimiteParaFarolVermelho__c</fullName>
    <inlineHelpText>Duração do tempo para ocorrer a perda do lead em minutos.</inlineHelpText>
    <label>Tempo limite para farol vermelho</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>